--- a/challenges/20.08.21~22/index.html
+++ b/challenges/20.08.21~22/index.html
@@ -101,6 +101,25 @@
         <span class="now-playing__title">Into the I-Land</span>
         <span class="now-playing__artist">IU</span>
       </div>
+
+      <div class="time-line">
+        <div class="time-line__time">
+          <span class="time-line__time__munber">0:00</span>
+          <span class="time-line__time__munber">-3:37</span>
+        </div>
+        <div class="time-line__line">
+          <div class="time-line__line__circle"></div>
+          <div class="time-line__line__main"></div>
+        </div>
+      </div>
+
+      <div class="music-controler">
+        <i class="fas fa-sync-alt"></i>
+        <i class="fas fa-step-backward"></i>
+        <i class="fas fa-play"></i>
+        <i class="fas fa-step-forward"></i>
+        <i class="fas fa-random"></i>
+      </div>
     </div>
 
     <script
