--- a/cloning/chats.html
+++ b/cloning/chats.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freinds - Kokoa clone</title>
+    <title>Chats - Kokoa clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,10 +23,13 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span>
           <i class="fas fa-search fa-lg"></i>
+        </span>
+        <span>
+          <i class="far fa-comment-dots fa-lg"></i>
         </span>
         <span>
           <i class="fas fa-music fa-lg"></i>
@@ -37,49 +40,41 @@
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i>
-      Friends Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
             src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
-            class="user-component__avatar user-component__avatar--xl"
+            class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Kang</h4>
-            <!-- <h6 class="user-component__subtitle">test</h6> -->
+            <h6 class="user-component__subtitle">
+              please check My Kokoa Account info
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <span class="user-commponent__time">21:22</span>
+          <div class="badge">1</div>
+        </div>
       </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
+            class="user-component__avatar user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Kang</h4>
+            <h6 class="user-component__subtitle">
+              please check My Kokoa Account info
+            </h6>
+          </div>
         </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
-            </div>
-          </div>
+        <div class="user-component__column">
+          <span class="user-commponent__time">21:22</span>
+          <div class="badge">1</div>
         </div>
       </div>
     </main>
@@ -88,13 +83,13 @@
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html">
-            <i class="fas fa-user fa-2x"></i>
+            <i class="far fa-user fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification__comment badge">1</span>
-            <i class="far fa-comment fa-2x"></i>
+            <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
