--- a/cloning/chats.html
+++ b/cloning/chats.html
@@ -7,7 +7,7 @@
     <title>Chats - Kokoa clone</title>
   </head>
   <body>
-    <div class="status-bar">
+    <div class="status-bar status-bar--bg-color-white">
       <div class="status-bar__column">
         <span>No Service</span>
         <i class="fas fa-wifi"></i>
@@ -41,24 +41,26 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Kang</h4>
-            <h6 class="user-component__subtitle">
-              please check My Kokoa Account info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Kang</h4>
+              <h6 class="user-component__subtitle">
+                please check My Kokoa Account info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-commponent__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-commponent__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
       <div class="user-component">
         <div class="user-component__column">
           <img
