--- a/cloning/friends.html
+++ b/cloning/friends.html
@@ -7,7 +7,7 @@
     <title>Freinds - Kokoa clone</title>
   </head>
   <body>
-    <div class="status-bar">
+    <div class="status-bar status-bar--bg-color-white">
       <div class="status-bar__column">
         <span>No Service</span>
         <i class="fas fa-wifi"></i>
