finish Kokoa-clone

--- a/cloning/chats.html
+++ b/cloning/chats.html
@@ -51,7 +51,7 @@
             <div class="user-component__text">
               <h4 class="user-component__title">Kang</h4>
               <h6 class="user-component__subtitle">
-                please check My Kokoa Account info
+                Hi
               </h6>
             </div>
           </div>
@@ -64,13 +64,13 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTZ0uhONgIQGfVK7tXZF5ByMORRCeRUa_Iq2A&usqp=CAU"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Kang</h4>
+            <h4 class="user-component__title">Hong</h4>
             <h6 class="user-component__subtitle">
-              please check My Kokoa Account info
+              How are you today?
             </h6>
           </div>
         </div>
@@ -107,6 +107,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/7d1aec5952.js"
