--- a/cloning/chat.html
+++ b/cloning/chat.html
@@ -42,7 +42,7 @@
         Tuesday, june 30, 2020
       </div>
 
-      <div class="messege-row">
+      <div class="messege-row messege__get">
         <img
           src="https://avatars3.githubusercontent.com/u/66230761?s=400&u=65eed365bf01e5451e37d5790a84f69ed8f58273&v=4"
         />
@@ -54,15 +54,32 @@
           </div>
         </div>
       </div>
-      <div class="messege-row messege--row">
+      <div class="messege-row messege-row--own messege__send">
         <div class="messege-row__content">
           <div class="messege__info">
-            <span class="messege__bubble">Hi</span>
+            <span class="messege__bubble">Hi nice to meet you</span>
             <span class="messege__time">21:27</span>
           </div>
         </div>
       </div>
     </main>
+
+    <form class="reply">
+      <div class="reply__column">
+        <i class="far fa-plus-square fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message..." />
+        <i class="far fa-smile fa-lg"></i>
+        <button>
+          <i class="fas fa-arrow-up fa-lg"></i>
+        </button>
+      </div>
+    </form>
+
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/7d1aec5952.js"
