--- a/cloning/index.html
+++ b/cloning/index.html
@@ -36,6 +36,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/7d1aec5952.js"
       crossorigin="anonymous"
