--- a/cloning/more.html
+++ b/cloning/more.html
@@ -88,9 +88,9 @@
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-users"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Kokoa Friends</span>
           </div>
         </div>
       </div>
@@ -122,6 +122,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/7d1aec5952.js"
