--- a/cloning/settings.html
+++ b/cloning/settings.html
@@ -133,6 +133,10 @@
       </ul>
     </nav>
 
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/7d1aec5952.js"
       crossorigin="anonymous"
